apps/console/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: console
spec:
  selector:
    app: console
  ports:
    - name: console-svc-port
      protocol: TCP
      port: 80
      targetPort: 3000
